--- a/TicketSystem/WebContent/Index.html
+++ b/TicketSystem/WebContent/Index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <!--  https://www.youtube.com/watch?v=OuBUUkQfBYM
-6. Create Servlet & Web.xml 30:22 -->
+6. Create Servlet & Web.xml 30:22 Servlet-->
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
